--- a/templates/estimates/template.html
+++ b/templates/estimates/template.html
@@ -87,4 +87,8 @@
     <!-- {BUTTONS_WRAPPER} ( DO NOT EDIT THIS LINE )-->
   </div>
   <div id="footer" class="clear">{footer}</div>
+  <div id="signatures">
+    <p class="left">Signature du fournisseur :</p>
+    <p class="right">Signature du client :</p>
+  </div>
 </div>
