--- a/src/estimate/template.css
+++ b/src/estimate/template.css
@@ -76,7 +76,7 @@ body > .estimate #footer > p:nth-child(2n) {
 
 #estimate:not(.edit-mode) #footer > p:nth-child(1),
 body > .estimate #footer > p:nth-child(1) {
-  margin-top: 0;
+  margin: 0 0 0.5rem;
   text-align: right;
 }
 
@@ -87,8 +87,7 @@ body > .estimate #footer ul {
 }
 
 #signatures {
-  margin-top: -1rem;
-  overflow-y: hidden;
+  margin-top: -0.5rem;
   font-weight: bold;
 }
 
